--- a/package.json
+++ b/package.json
@@ -18,6 +18,14 @@
   },
   "homepage": "https://github.com/uday169/namaste-react-course#readme",
   "devDependencies": {
-    "parcel": "^2.8.3"
-  }
+    "parcel": "^2.9.2",
+    "process": "^0.11.10"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "browserslist":[   
+    "last 2 versions"
+  ]
 }
