created class based component

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "process": "^0.11.10"
   },
   "dependencies": {
+    "caniuse-lite": "^1.0.30001651",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1"
